--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 dataclasses-json==0.6.7
 Deprecated==1.2.14
 dirtyjson==1.0.8
@@ -58,7 +59,6 @@ pydantic==2.8.2
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
-pymssql==2.3.0
 pypdf==4.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -68,7 +68,6 @@ PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
-setuptools==70.3.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -85,7 +84,6 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.1
-uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 wrapt==1.16.0
