--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pydantic==2.8.2
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+pymssql==2.3.0
 pypdf==4.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
